--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 - name: Home
   link: /
+- name: Projects
+  link: /projects
 - name: Blog
-  link: /blog.html
+  link: /blog
 - name: Contact
-  link: /contact.html
+  link: /contact
