Start adding projects, first one, pocket chef

--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,8 @@ defaults:
       type: "posts" 
     values:
       layout: "post"
+
+collections:
+  projects:
+    order:
+      - pocket_chef.md
