--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,12 @@
 - name: Home
+  name_fr: Acceuil
   link: /
 - name: Projects
+  name_fr: Projets
   link: /projects
 - name: Blog
+  name_fr: Blog
   link: /blog
 - name: Contact
+  name_fr: Contact
   link: /contact
